Envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/c/"
                route:
                  #auto_host_rewrite: true
                  prefix_rewrite: "/weather"
                  cluster: service_coffe
              - match:
                  prefix: "/t/"
                route:
                  #auto_host_rewrite: true
                  prefix_rewrite: "/weather"
                  cluster: service_tea

  clusters:
  - name: service_coffe
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_coffe
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: envoy_coffeapi_1
                port_value: 80
  
  - name: service_tea
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_tea
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: envoy_teaapi_1
                port_value: 80
